fixed transition on hover and align event  text blocks

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -109,6 +109,7 @@
 
     @include onTablet {
       justify-content: start;
+
       gap: 30px;
       font-size: 14px;
       margin-bottom: 32px;
@@ -123,7 +124,12 @@
       justify-content: start;
       gap: 180px;
       font-size: 14px;
+      padding: 0;
       margin-bottom: 16px;
+    }
+
+    @include onTablet {
+      gap: 150px;
     }
   }
 
@@ -146,8 +152,6 @@
     margin-bottom: 10px;
     position: relative;
 
-    transition: transform $transitionTime;
-
     &::after {
       content: "";
       display: inline-block;
@@ -159,28 +163,24 @@
       height: 10px;
       background-color: $colorRed;
 
+      transition: transform $transitionTime;
 
       @include onTablet {
         width: 15px;
         height: 15px;
         margin-left: 20px;
       }
-
-
     }
 
     &:hover::after {
       transform: translateY(-10px) rotate(135deg);
       transform-origin: center;
-
     }
 
     @include onTablet {
       font-size: 36px;
       margin-bottom: 15px;
     }
-
-
   }
 
   &__title-lecture {
@@ -193,7 +193,6 @@
     @include onTablet {
       font-size: 36px;
       text-align: left;
-
     }
   }
 
@@ -202,7 +201,7 @@
   }
 
   &__subtitle {
-    color: #4E4E4E;
+    color: #4e4e4e;
     font-weight: 300;
     line-height: 150%;
   }
