--- a/src/styles/blocks/logo-link.scss
+++ b/src/styles/blocks/logo-link.scss
@@ -1,6 +1,10 @@
 .logo-link {
   @extend %styleLogo;
-  transition: transform $transitionTime;
+
+  &--left,
+  &--right {
+    transition: transform $transitionTime;
+  }
 
   &:hover .logo-link--left {
     transform: translateX(-10%);
